fix wrapper margin issue for alignment in all sections. finish article height css issue. all for desktop css

--- a/easybank-landing-page/src/components/Home/style/_articles.scss
+++ b/easybank-landing-page/src/components/Home/style/_articles.scss
@@ -10,9 +10,9 @@ section.articles {
 
         @media(min-width: $breakpoint-desktop) {
             flex-flow: wrap row;
+            justify-content: space-between;
             width: 80%;
             margin: 0 auto;
-            padding-left: 5rem;
         }
     }
 }
@@ -40,21 +40,26 @@ article.featured-article {
     @media(min-width: $breakpoint-desktop) {
         width: 23%;
         margin: 0;
-        margin-right: 2%;
     }
 
 }
 
 aside.article-hero {
     width: 100%;
-    height: 100%;
-    background: yellow;
+
+    figure {
+        width: 100%;
+        height: 13em;
+        overflow: hidden;
+    }
+
     img {
         display: block;
         margin: 0 auto;
-        object-fit: fill;
-        display: none;
-
+        object-fit: cover;
+        height: 13em;
+        width: 100%;
+    
         -webkit-border-top-left-radius:.35em;
         -webkit-border-top-right-radius: .35em;
         -moz-border-radius-topleft: .35em;
@@ -65,14 +70,12 @@ aside.article-hero {
 }
 
 aside.article-content {
-    width: 100%;
-    height: 100%;
-    background: pink;
-    // overflow: hidden;
     padding: 2rem;
 
     @media(min-width: $breakpoint-desktop) {
-        padding: 1.5rem;
+        padding: 1.5rem;     
+        height: 13em;
+        overflow: hidden;
     }
 
     p {
