--- a/easybank-landing-page/src/components/Layout/Nav/nav.scss
+++ b/easybank-landing-page/src/components/Layout/Nav/nav.scss
@@ -2,16 +2,22 @@
 
 header {
     width: 100%;
-    display: flex;
-    flex-flow: nowrap column;
+    background:  $white;
+    position: relative;
+    z-index: 2;
 
-
-    @media (min-width: $breakpoint-desktop) {
-        flex-flow: nowrap row;
-        justify-content: space-between;
-        background:  $white;
-        max-width: 70%;
-        margin: 0 auto;
+        main.container {
+            width: 100%;
+            display: flex;
+            flex-flow: nowrap column;
+        
+        
+            @media (min-width: $breakpoint-desktop) {
+                flex-flow: nowrap row;
+                justify-content: space-between;
+                max-width: 80%;
+                margin: 0 auto;
+        }
     }
 
     button.gradient-btn {
