--- a/easybank-landing-page/src/components/style/reset.scss
+++ b/easybank-landing-page/src/components/style/reset.scss
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     vertical-align: baseline;
+    box-sizing: border-box;
     font-size: 100%;
     font: inherit;
 }
